--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,51 +1,38 @@
 ---
-interface Props {
-	title: string;
+import '@/style/tailwind.css'
+
+import { appDescription, appName } from '@/constants'
+
+import CustomStyle from '@/components/CustomStyle.astro'
+import Favicons from '@/components/Favicons.astro'
+import Metadata from '@/components/Metadata.astro'
+import ApplyColorMode from '@/components/InitColorMode.astro'
+
+import type { MetaData as MetaDataType } from '@/types'
+export interface Props {
+  metadata?: MetaDataType
 }
 
-const { title } = Astro.props;
+const defaultMetadata: MetaDataType = {
+  title: appName,
+  description: appDescription,
+}
+
+const {
+  metadata = defaultMetadata,
+} = Astro.props
+
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html>
+  <head>
+    <Metadata {...metadata} />
+    <Favicons />
+    <CustomStyle />
+    <ApplyColorMode />
+  </head>
+  <body class='bg-page text-default'>
+    <slot />
+  </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
