feat: 基本功能实现

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,12 @@
 import ToggleDarkMode from './ToggleColorMode'
 ---
 
-<div class='flex justify-between'>
-  <h1 class='text-5xl font-bold'>
-    {/* AudiRead */}
+<nav class='flex gap-4 relative border-b border-base px-8 py-3'>
+  <div class='flex-auto' />
+  <h1 class='text-xl absolute left-0 right-0 bottom-0 top-0 flex justify-center items-center'>
+    AudiRead
   </h1>
+  <a target='_blank' href='https://github.com/liou666/audiread' class='i-mdi-github icon-btn' rel='noreferrer' />
   <ToggleDarkMode client:only />
-</div>
+</nav>
+
