--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const {
     <CustomStyle />
     <ApplyColorMode />
   </head>
-  <body class='bg-page text-default'>
+  <body class='bg-page text-default font-mono'>
     <slot />
   </body>
 </html>
