--- a/src/components/CustomStyle.astro
+++ b/src/components/CustomStyle.astro
@@ -1,26 +1,31 @@
 <style is:inline is:global>
   :root {
     --c-primary: rgb(30 64 175);
-    --c-secondary: rgb(30 58 138);
-    --c-accent: rgb(109 40 217);
+    --c-secondary: rgba(156, 163, 175, 0.1);
+    --c-accent:  rgba(156, 163, 175, 0.09);
 
     --c-text-heading: rgb(0 0 0);
     --c-text-default: #222;
     --c-text-muted: rgb(16 16 16 / 66%);
 
-    --c-bg-page: #fafafa;
+    --c-bg-page: #fff;
     --c-bg-page-dark: #111;
 
     --c-scroll: #d9d9d9;
     --c-scroll-hover: #bbbbbb;
 
     --c-shadow: #00000008;
+
+    ---c-border-base : #aaa3;
+
   }
 
   html.dark {
     --c-primary: rgb(30 64 175);
-    --c-secondary: rgb(30 58 138);
-    --c-accent: rgb(109 40 217);
+    --c-secondary: rgba(156, 163, 175, 0.1);
+    --c-accent:  rgba(156, 163, 175, 0.2);
+
+    ---c-border-base : #aaa4;
 
     --c-text-heading: rgb(0 0 0);
     --c-text-default: #dadada;
@@ -56,4 +61,58 @@
   ::-webkit-scrollbar-thumb:hover {
     background-color: var(--c-scroll-hover);
   }
+</style>
+
+<style is:inline is:global>
+.slider {
+  appearance: none;
+  height: 22px;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.dark .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 5px;
+  height: 22px;
+  background: #fff;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.dark .slider::-moz-range-thumb {
+  width: 5px;
+  height: 22px;
+  background: #fff;
+  cursor: pointer;
+  z-index: 10;
+}
+.slider::-moz-range-thumb{
+  /* background: #333; */
+  background: red;
+
+  width: 5px;
+  height: 22px;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 5px;
+  height: 22px;
+  cursor: pointer;
+  box-shadow: none;
+  z-index: 10;
+  background-color: rgba(51, 51, 51, 0.2);
+}
+
 </style>
