--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -4,42 +4,44 @@
 
 
 @layer utilities {
-  .bg-page {
-    background-color: var(--c-bg-page);
+  .border-base {
+    @apply dark:border-[#aaa3] border-[#aaa4]
   }
-  .bg-dark {
-    background-color: var(--c-bg-page-dark);
+
+  .border-box{
+    @apply border border-base rounded
+  } 
+
+  .fc {
+    @apply flex items-center justify-center
   }
-  .bg-light {
-    background-color: var(--c-bg-page);
+  .f-col {
+    @apply flex flex-col
   }
-  .text-page {
-    color: var(--c-text-page);
+  .fxc {
+    @apply flex justify-center
   }
-  .text-muted {
-    color: var(--c-text-muted);
+  .fyc {
+    @apply flex items-center
   }
- 
+  
 }
 
 @layer components {
+  .btn-light{
+    @apply border shadow-sm duration-150 transition-all rounded hover:bg-active px-3 py-1 flex gap-1 items-center justify-center 
+   }
+
   .btn {
-    @apply inline-flex items-center justify-center rounded-full border-gray-400 border bg-transparent font-medium text-center text-base text-page leading-snug transition py-3.5 px-6 md:px-8 ease-in duration-200 focus:ring-blue-500 focus:ring-offset-blue-200 focus:ring-2 focus:ring-offset-2 hover:bg-gray-100 hover:border-gray-600 dark:text-slate-300 dark:border-slate-500 dark:hover:bg-slate-800 dark:hover:border-slate-800 cursor-pointer;
+    @apply btn-light border-base
   }
+
   .icon-btn {
     @apply text-xl inline-block cursor-pointer select-none opacity-75 transition duration-200 ease-in-out hover:opacity-100 outline-none
   }
 
-  .btn-primary {
-    @apply duration-300 border-0 px-4  py-1 flex items-center rounded  bg-teal-700 text-white cursor-pointer hover:bg-teal-800 disabled:cursor-default disabled:bg-gray-600 disabled:opacity-50
-  }
-
-  .btn-secondary {
-    @apply btn;
-  }
-
-  .btn-tertiary {
-    @apply btn border-none shadow-none text-muted hover:text-gray-900 dark:text-gray-400 dark:hover:text-white;
+  .base-input{
+    @apply dark:placeholder-gray-400/30 focus:opacity-100 opacity-75 dark:bg-[#000]/5 border-base dark:text-gray-300 placeholder-gray-300 block box-border w-full rounded-md shadow-sm transition-all  focus:bg-[#fff]/60 dark:focus:bg-[#f3f3f3]/5 focus:shadow-md outline-none focus:ring-[#eceef0] dark:focus:ring-[#eceef0]/60 focus:ring-1 border   text-sm px-4 py-2
   }
 }
 
