--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Ribbon from '@/components/Ribbon'
     <main class='flex-1'>
       <Ribbon client:only />
     </main>
-    <!-- <Footer /> -->
+    <Footer />
   </div>
 </Layout>
 
