feat: 适配移动端

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,9 @@
 import ToggleDarkMode from './ToggleColorMode'
 ---
 
-<nav class='flex gap-4 relative border-b border-base px-8 py-3'>
-  <div class='flex-auto' />
-  <h1 class='text-xl absolute left-0 right-0 bottom-0 top-0 flex justify-center items-center'>
+<nav class='fc gap-4 fixed z-10 left-0 right-0 bg-page top-0 border-b border-base md:px-8 px-4 py-3'>
+  <div class='flex-auto h-8' />
+  <h1 class='text-xl absolute left-0 right-0 bottom-0 top-0 fc'>
     AudiRead
   </h1>
   <a target='_blank' href='https://github.com/liou666/audiread' class='i-mdi-github icon-btn' rel='noreferrer' />
