--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import ToggleDarkMode from './ToggleColorMode'
+import StandaloneLanguageToggle from './StandaloneLanguageToggle'
 ---
 
 <nav class='fc gap-4 fixed z-10 left-0 right-0 bg-page top-0 border-b border-base md:px-8 px-4 py-3'>
@@ -7,6 +8,8 @@ import ToggleDarkMode from './ToggleColorMode'
   <h1 class='text-xl absolute left-0 right-0 bottom-0 top-0 fc'>
     AudiRead
   </h1>
+  <StandaloneLanguageToggle client:only />
+
   <a target='_blank' href='https://github.com/liou666/audiread' class='i-mdi-github icon-btn' rel='noreferrer' />
   <ToggleDarkMode client:only />
 </nav>
